--- a/MFCTest/MFCTest/MFCTest.vcxproj
+++ b/MFCTest/MFCTest/MFCTest.vcxproj
@@ -183,14 +183,19 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Animal.h" />
+    <ClInclude Include="Dog.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="MFCTest.h" />
     <ClInclude Include="MFCTestDlg.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Person.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Animal.cpp" />
+    <ClCompile Include="Dog.cpp" />
     <ClCompile Include="MFCTest.cpp" />
     <ClCompile Include="MFCTestDlg.cpp" />
     <ClCompile Include="pch.cpp">
@@ -199,6 +204,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Person.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="MFCTest.rc" />
