--- a/MFCTest/MFCTest/MFCTest.vcxproj
+++ b/MFCTest/MFCTest/MFCTest.vcxproj
@@ -191,6 +191,7 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="Person.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="ScrollTest.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
@@ -205,6 +206,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Person.cpp" />
+    <ClCompile Include="ScrollTest.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="MFCTest.rc" />
