--- a/MFCTest/MFCTest/MFCTest.vcxproj
+++ b/MFCTest/MFCTest/MFCTest.vcxproj
@@ -51,9 +51,9 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v143</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
     <UseOfMfc>Dynamic</UseOfMfc>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
@@ -215,7 +215,10 @@
     <None Include="res\MFCTest.rc2" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="res\Dog_icon.ico" />
+    <Image Include="res\icon1.ico" />
     <Image Include="res\MFCTest.ico" />
+    <Image Include="res\wheel-icons.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
