--- a/MFCTest/MFCTest/MFCTest.vcxproj.filters
+++ b/MFCTest/MFCTest/MFCTest.vcxproj.filters
@@ -80,5 +80,8 @@
     <Image Include="res\wheel-icons.ico">
       <Filter>리소스 파일</Filter>
     </Image>
+    <Image Include="res\direction_straight.ico">
+      <Filter>리소스 파일</Filter>
+    </Image>
   </ItemGroup>
 </Project>
